Added Shared Preferences

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   google_fonts: ^1.1.1
   neumorphic: ^0.4.0
   provider: ^4.3.2+2
+  shared_preferences: ^0.5.12+2
 
 dev_dependencies:
   flutter_test:
