--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
-  flutter_neumorphic: ^3.0.3
   google_fonts: ^1.1.1
+  neumorphic: ^0.4.0
   provider: ^4.3.2+2
   shared_preferences: ^0.5.12+2
 
