--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   neumorphic: ^0.4.0
   provider: ^4.3.2+2
   shared_preferences: ^0.5.12+2
+  url_launcher: ^5.7.6
 
 dev_dependencies:
   flutter_test:
