--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^2.3.3
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.1
   neumorphic: ^0.4.0
